Kafka Initial code

--- a/Post.Cmd.Api/appsettings.Development.json
+++ b/Post.Cmd.Api/appsettings.Development.json
@@ -5,9 +5,12 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "MongoDbConfig" : {
+  "MongoDbConfig": {
     "ConnectionString": "mongodb://localhost:27017",
     "Database": "socialMedia",
     "Collection": "eventStore"
+  },
+  "ProducerConfig": {
+    "BootstrapServers": "localhost:9092",
   }
 }
