--- a/Post.Cmd.Api/Properties/launchSettings.json
+++ b/Post.Cmd.Api/Properties/launchSettings.json
@@ -7,7 +7,8 @@
       "launchBrowser": false,
       "applicationUrl": "http://localhost:5043",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "Development",
+        "KAFKA_TOPIC": "socialMediaPostEvents"
       }
     },
     "https": {
